# oneup

./: .gitignore  Cargo.toml  PLAN.md  README.md  package.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml
homebrew/: oneup.rb.template
npm/: .gitignore  .npmrc  install.js  package.json
skills/oneup/: SKILL.md
src/: cli.rs  crates_io.rs  format.rs  git.rs  main.rs  npmrc.rs  registry.rs  target.rs  version.rs
